--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
     "identicon.js": "^2.3.3",
+    "ipfs-http-client": "^56.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
